see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Nov-2010 Christophe Demko
 # [#23532] Strict errors - issues with JCacheController (Ian MacLennan)
 # [#23537] Method signatures don't match causing PHP strict errors - JRouter (Ian MacLennan)
 # [#23536] Method signatures don't match causing PHP strict errors - JDate (Ian MacLennan)
 # [#23535] Method signatures don't match causing PHP strict errors - articles model get items (Ian MacLennan)
 # [#23580] 500 Errors going to Article Manager in Hathor (Andrea Tarr)

30-Nov-2010 Jean-Marie Simonet
 # Updating JLanguageTest
 # Corrected JArrayHelperTest unicode corruption
 # [#23569] When adding a form as plugin into article "JLIB_APPLICATION_ERROR_UNHELD_ID" is thrown. Thanks Mark.
 # [#23439] redundant code in components/com_weblinks/controllers/weblink.php. Thanks Bill.

-------------------- 1.6.0 Beta15 Release [29-Nov-2010] ------------------

29-Nov-2010 Mark Dexter
# Sample data fixes (Elin Waring)

29-Nov-2010 Christophe Demko
 # [#23525] Access to media manager & ACL
 # [#23559] Installer does not initialize the asset table when component is installed

29-Nov-2010 Jean-Marie Simonet
 # [#23340] sort order Extension Manager: Manage (filter). Thanks Klas and Christophe.
 # [#23555] Duplicate alias error in home page removes home page of the site. Thanks Mark
 # [#23376] Confirm password reset fails with invalid token. Thanks Ian.
 $ Missing lines in en-GB.xml and xx-XX.xml, missing ini files in xx-XX.
 # [#23539] Administrator custom module causes fatal error when used with com_content. Thanks Ian.
 $ Consolidated some string, adding missing string.