@@ -30,7 +30,7 @@ COM_INSTALLER_INSTALL_DIRECTORY="Install Directory"
 COM_INSTALLER_INSTALL_ERROR="Error installing %s"
 COM_INSTALLER_INSTALL_FROM_DIRECTORY="Install from Directory"
 COM_INSTALLER_INSTALL_FROM_URL="Install from URL"
-COM_INSTALLER_INSTALL_SUCCESS="%s successfully installed "
+COM_INSTALLER_INSTALL_SUCCESS="Installing %s was successful."
 COM_INSTALLER_INSTALL_URL="Install URL"
 COM_INSTALLER_INVALID_EXTENSION_UPDATE="Invalid extension update"
 COM_INSTALLER_LABEL_HIDEPROTECTED_DESC="Hide protected extensions. Protected extensions can't be uninstalled."
@@ -54,10 +54,10 @@ COM_INSTALLER_MSG_INSTALL_WARNINSTALLFILE="The installer cannot continue until f
 COM_INSTALLER_MSG_INSTALL_WARNINSTALLUPLOADERROR="There was an error uploading this file to the server."
 COM_INSTALLER_MSG_INSTALL_WARNINSTALLZLIB="The installer cannot continue until Zlib is installed."
 COM_INSTALLER_MSG_MANAGE_NOEXTENSION="There are no_extensions installed matching your query"
-COM_INSTALLER_MSG_UPDATE_ERROR="Error updating %s"
+COM_INSTALLER_MSG_UPDATE_ERROR="Error updating %s."
 COM_INSTALLER_MSG_UPDATE_NODESC="No description available for this item."
 COM_INSTALLER_MSG_UPDATE_NOUPDATES="There are no updates available at the moment. Please check again later."
-COM_INSTALLER_MSG_UPDATE_SUCCESS="%s successfully updated "
+COM_INSTALLER_MSG_UPDATE_SUCCESS="Updating %s was successful."
 COM_INSTALLER_MSG_UPDATE_UPDATE="Update"
 COM_INSTALLER_MSG_WARNINGFURTHERINFO="Further information on warnings"
 COM_INSTALLER_MSG_WARNINGFURTHERINFODESC="For more information on warnings, see the <a href="_QQ_"http://docs.joomla.org"_QQ_">Joomla! Documentation Site</a>; NOTE: FILL THIS IN MORE SPECIFICALLY"
@@ -106,9 +106,16 @@ COM_INSTALLER_TYPE_NONAPPLICABLE="N/A"
 COM_INSTALLER_TYPE_PACKAGE="Package"
 COM_INSTALLER_TYPE_PLUGIN="Plugin"
 COM_INSTALLER_TYPE_TEMPLATE="Template"
+COM_INSTALLER_TYPE_TYPE_COMPONENT="Component"
+COM_INSTALLER_TYPE_TYPE_FILE="file"
+COM_INSTALLER_TYPE_TYPE_LANGUAGE="language"
+COM_INSTALLER_TYPE_TYPE_LIBRARY="library"
+COM_INSTALLER_TYPE_TYPE_MODULE="module"
+COM_INSTALLER_TYPE_TYPE_PLUGIN="plugin"
+COM_INSTALLER_TYPE_TYPE_TEMPLATE="template"
 COM_INSTALLER_UNABLE_TO_FIND_INSTALL_PACKAGE="Unable to find install package"
 COM_INSTALLER_UNINSTALL_ERROR="Error uninstalling %s."
-COM_INSTALLER_UNINSTALL_SUCCESS="%s successfully uninstalled."
+COM_INSTALLER_UNINSTALL_SUCCESS="Uninstalling %s was successful."
 COM_INSTALLER_UPLOAD_AND_INSTALL="Upload &amp; Install"
 COM_INSTALLER_UPLOAD_PACKAGE_FILE="Upload Package File"
 COM_INSTALLER_VALUE_CLIENT_SELECT="- Select Location -"
