@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+01-Dec-2010 Jean-Marie Simonet
+ $^ Enabling custom translation of types in installer messages
+ 
 29-Nov-2010 Christophe Demko
  # [#23532] Strict errors - issues with JCacheController (Ian MacLennan)
  # [#23537] Method signatures don't match causing PHP strict errors - JRouter (Ian MacLennan)
